# TB2026-YDS-Firmware

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  partitions.csv  sdkconfig.defaults
components/bsp/: CMakeLists.txt  adc.c  adc.h  board_pins.h  bsp.h  i2c_bus.c  i2c_bus.h  i2s_bus.c  i2s_bus.h  spi_bus.c  spi_bus.h
components/drivers/audio_dac/: CMakeLists.txt  audio_dac.c  audio_dac.h
components/drivers/display_oled/: CMakeLists.txt  display_oled.c  display_oled.h
components/drivers/sdcard/: sdcard.c  (+2 more)
components/screens/: CMakeLists.txt  menu_item.h  menu_screen.c  menu_screen.h  root_menu.c  root_menu.h
components/screens/audio/: music_screen.c  music_screen.h  now_playing.c  now_playing.h  output_select.c  output_select.h  playlist_browser.c  playlist_browser.h
components/screens/settings/: audio_settings.c  audio_settings.h  bluetooth_settings.c  bluetooth_settings.h  bt_devices.c  duration_picker.c  duration_picker.h  power_settings.c  power_settings.h  screen_settings.c  screen_settings.h  settings_screen.c  settings_screen.h
components/screens/stats/: battery_test.c  battery_test.h  fuel_gauge_debug.c  fuel_gauge_debug.h  stats_screen.c  stats_screen.h
components/screens/storage/: storage_screen.c  storage_screen.h
components/services/audio/: CMakeLists.txt  audio_sink.h  decoder.c  decoder.h  decoder_backend.h  decoder_mp3.c  decoder_wav.c  mp3_frame.c  mp3_frame.h  pipeline.c  pipeline.h  player.c  player.h  playlist.c  playlist.h  sink_bluetooth.c  sink_bluetooth.h  sink_i2s_dac.c  sink_i2s_dac.h  track_meta.c  track_meta.h  volume.c  volume.h
components/ui/: CMakeLists.txt  event.h  gfx.c  gfx.h  icons.c  icons.h  menu_item.h  menu_screen.c  navigator.c  navigator.h  screen.h  status_bar.c  status_bar.h
docs/datasheets/: NHD-1.91-176176UBC3.md  PI4IOE5V9554 PI4IOE5V9554A.md  cp2102n-datasheet.md  max17260.md  max1726x-modelgauge-m5-ez-user-guide.md  pcm5242.md
main/: CMakeLists.txt  app.c  app.h  app_main.c
scripts/: README.md  campagne.sh  coredump.sh  icon2c.py
test/host/: .gitignore  decoder_test.c  gfx_test.c  input_test  input_test.c  menu_screen_test.c  navigator_test.c  player_test.c  playlist_test  playlist_test.c  root_menu_test  root_menu_test.c  run.sh  screens_snapshot.c  screenshot.sh  storage_test  storage_test.c  track_meta_test.c  view.sh
(+55 files in other folders)
